--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyDB": "Data Source=LAPTOP-13GKAAHM\\SQLEXPRESS;Initial Catalog=Web_DonNghiPhep;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
