--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyDB": "Data Source=DESKTOP-OQOPSNN;Initial Catalog=Web_DonNghiPhep;Integrated Security=True;Trust Server Certificate=True"
+    "MyDB": "Data Source=DESKTOP-J6CIU8L;Initial Catalog=Web_DonNghiPhep;Integrated Security=True;Trust Server Certificate=True"
 
   },
   "Logging": {
