--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyDB": "workstation id=DonNghiPhepDB.mssql.somee.com;packet size=4096;user id=vinhvuiver2003_SQLLogin_1;pwd=ydk8xpexz3;data source=DonNghiPhepDB.mssql.somee.com;persist security info=False;initial catalog=DonNghiPhepDB;TrustServerCertificate=True"
+    "MyDB": "Data Source=LAPTOP-13GKAAHM\\SQLEXPRESS;Initial Catalog=Web_DonNghiPhep;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
   },
   "Logging": {
